# geochem-streamlit

./: .gitignore  LICENSE  README.md  app.py  binning.py  data_loader.py  editors.py  export_manager.py  filter_bar.py  main.py  normalizer.py  plotting.py  pyproject.toml  requirements.txt  save_style_to_json.py  sidebar_info.py  styles.py  tas_plot.py  user_style.py  utils.py
.streamlit/: secrets.toml
src/: app.py  normalizer.py  save_style_to_json.py
src/geochem_streamlit/: app.py  data_loader.py  editors.py  export_manager.py  filter_bar.py  sidebar_info.py  styles.py  tas_plot.py  user_style.py  utils.py
src/geochem_streamlit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/geochem_streamlit/.streamlit/: secrets.toml
